--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <form action="../js/index.js" method="post" enctype="multipart/form-data">
                     <div class="thumbnail">
                         <input type="file" name="" id="myImage" accept=".jpg, .png, gif">
-                        <img src="public/imagenes/fcbook.png" alt="imagen" id="myFile" class="img-responsive" />
+                        <img src="./public/imagenes/fcbook.png" alt="imagen" id="myFile" class="img-responsive" />
                        
                         <div class="caption" value="+"´${validUser.name}´>
                             <h4>Header Name</h4>
