--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3">
                     <div class="thumbnail">
-                        <img src="public/imagenes/fcbook.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <img src="C:\git-cl-web\Web\public\images\fcbook.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
