--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         </div>
     </div>
 </section>
-<script src="../js/index.js"></script>
-<script src="../js/app.js"></script>
+<script src="js/index.js"></script>
+<script src="js/app.js"></script>
    
 </body>
 </html>
