--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 <section>
     <h1>Home</h1>
-    <button id="logout" class="btn btn-primary">Cerrar Sesion</button><br>
+    <button id="#logout" class="btn btn-primary"action="../js/index.js">Cerrar Sesion</button><br>
     <div class="container">
             <div class="row"><!--${validUser.name}-->
             <ul class="thumbnails">
                 <div class="col-md-3 col-sm-3">
 
                     <!-- se Esta añadiendo la imagen-->
-                <form action="../js/index.js" method="post" enctype="multipart/form-data">
+                <form action="js/index.js" method="post" enctype="multipart/form-data">
                     <div class="thumbnail">
                         <input type="file" name="" id="myImage" accept=".jpg, .png, gif">
                         <img src="public/images/fcbook.png" alt="imagen" id="myFile" class="img-responsive" />
@@ -30,7 +30,7 @@
                         <div class="caption" value="+"´${validUser.name}´>
                             <h4>Header Name</h4>
                             <p>Description</p>
-                            <p align="center"><a href="../js/index.js" type="submit" id="GuardarImagen" name="GuardarImagen" class="btn btn-primary btn-block">Subir imagen</a>
+                            <p align="center"><a href="js/index.js" type="submit" id="GuardarImagen" name="GuardarImagen" class="btn btn-primary btn-block">Subir imagen</a>
                             </p>
                         </div>
                     </div>
