--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <form action="js/index.js" method="post" enctype="multipart/form-data">
                     <div class="thumbnail">
                         <input type="file" name="" id="myImage" accept=".jpg, .png, gif">
-                        <img src="public/images/fcbook.png" alt="imagen" id="myFile" class="img-responsive" />
+                        <img src="public/images/logoo.png" alt="imagen" id="myFile" class="img-responsive" />
                        
                         <div class="caption" value="+"´${validUser.name}´>
                             <h4>Header Name</h4>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3">
                     <div class="thumbnail">
-                        <img src="public/images/fcbook.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <img src="public/images/logoo.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3">
                     <div class="thumbnail">
-                    <img src="public/images/fcbook.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                    <img src="public/images/logoo.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3">
                     <div class="thumbnail">
-                        <img src="public/images/fcbook.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <img src="public/images/logoo.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
@@ -71,7 +71,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3">
                     <div class="thumbnail">
-                        <img src="public/images/fcbook.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <img src="public/images/logoo.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3">
                     <div class="thumbnail">
-                        <img src="public/images/fcbook.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
+                        <img src="public/images/logoo.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                         <div class="caption">
                         <h4>Header Name</h4>
                             <p>Description</p>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3">
                     <div class="thumbnail">
-                        <img src="public/images/fcbook.png" alt="ALT NAME" class="img-responsive" />
+                        <img src="public/images/logoo.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
@@ -105,7 +105,7 @@
                 
                 <div class="col-md-3 col-sm-3">
                     <div class="thumbnail">
-                        <img src="public/images/fcbook.png" alt="ALT NAME" class="img-responsive" />
+                        <img src="public/images/logoo.png" title="online shopping store For safety & secrity Products" alt="ALT NAME" class="img-responsive" />
                         <div class="caption">
                             <h4>Header Name</h4>
                             <p>Description</p>
