--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" src="css/style.css">
+    <script src="js/index.js"></script>
 </head>
 <body>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -22,7 +23,7 @@
                 <div class="col-md-3 col-sm-3">
 
                     <!-- se Esta añadiendo la imagen-->
-                <form action="js/index.js" method="post" enctype="multipart/form-data">
+                <form action="js/app.js" method="post" enctype="multipart/form-data">
                     <div class="thumbnail">
                         <input type="file" name="" id="myImage" accept=".jpg, .png, gif">
                         <img src="public/images/logoo.png" alt="imagen" id="myFile" class="img-responsive" />
@@ -118,7 +119,7 @@
         </div>
     </div>
 </section>
-<script src="js/index.js"></script>
+
 <script src="js/app.js"></script>
    
 </body>
