--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <form action="js/app.js" method="post" enctype="multipart/form-data">
                     <div class="thumbnail">
                         <input type="file" name="" id="myImage" accept=".jpg, .png, gif">
-                        <img src="public/images/logoo.png" alt="imagen" id="myFile" class="img-responsive" />
+                        <img src="" alt="imagen" id="myFile" class="img-responsive" />
                        
                         <div class="caption" value="+"´${validUser.name}´>
                             <h4>Header Name</h4>
