--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Home</title>
     <link rel="stylesheet" src="css/style.css">
     
+    
 </head>
 <body>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -119,6 +120,7 @@
         </div>
     </div>
 </section>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="js/index.js"></script>
 <script src="js/app.js"></script>
    
